[gd_scene load_steps=8 format=3 uid="uid://c6ltvdgctnf24"]

[ext_resource type="Script" path="res://ui/drive_overlay/ingame_overlay.gd" id="1_n7y6m"]
[ext_resource type="Texture2D" uid="uid://cxjl5lu8v7d2" path="res://ui/BuildOverlay/Base.png" id="2_lbicx"]
[ext_resource type="Texture2D" uid="uid://6gvdicxtp8qr" path="res://ui/BuildOverlay/Base2.png" id="3_42qf7"]
[ext_resource type="Theme" uid="uid://ct1c3bqhs7bfp" path="res://ui/theme.tres" id="5_pvnmk"]
[ext_resource type="Texture2D" uid="uid://b5edu0dpqwf70" path="res://ui/BuildOverlay/Rocket.png" id="8_6qtat"]
[ext_resource type="Texture2D" uid="uid://bw2hfpcoo4g8e" path="res://ui/BuildOverlay/Spring.png" id="9_kev5b"]
[ext_resource type="Texture2D" uid="uid://babjqf03q5bgs" path="res://ui/BuildOverlay/Minicar.png" id="10_vyvho"]

[node name="IngameOverlay" type="Control" groups=["ingame_overlay"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_n7y6m")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(1.00268, 1)
mouse_filter = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 900
theme_override_constants/margin_bottom = 0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(1920, 0)
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/CenterContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 20

[node name="Rocket" type="TextureButton" parent="MarginContainer/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture_normal = ExtResource("2_lbicx")
texture_pressed = ExtResource("3_42qf7")
stretch_mode = 0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/CenterContainer/HBoxContainer/Rocket"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
offset_right = 52.0
offset_bottom = 40.0
texture = ExtResource("8_6qtat")

[node name="Label2" type="Label" parent="MarginContainer/CenterContainer/HBoxContainer/Rocket"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
mouse_filter = 1
theme = ExtResource("5_pvnmk")
theme_override_font_sizes/font_size = 48
text = "SPACE "
horizontal_alignment = 2
vertical_alignment = 2

[node name="Spring" type="TextureButton" parent="MarginContainer/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture_normal = ExtResource("2_lbicx")
texture_pressed = ExtResource("3_42qf7")
stretch_mode = 0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/CenterContainer/HBoxContainer/Spring"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
offset_right = 52.0
offset_bottom = 40.0
texture = ExtResource("9_kev5b")

[node name="Label2" type="Label" parent="MarginContainer/CenterContainer/HBoxContainer/Spring"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
mouse_filter = 1
theme = ExtResource("5_pvnmk")
theme_override_font_sizes/font_size = 48
text = "q "
horizontal_alignment = 2
vertical_alignment = 2

[node name="Minicar" type="TextureButton" parent="MarginContainer/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture_normal = ExtResource("2_lbicx")
texture_pressed = ExtResource("3_42qf7")
stretch_mode = 0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/CenterContainer/HBoxContainer/Minicar"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
offset_right = 52.0
offset_bottom = 40.0
texture = ExtResource("10_vyvho")

[node name="Label2" type="Label" parent="MarginContainer/CenterContainer/HBoxContainer/Minicar"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
mouse_filter = 1
theme = ExtResource("5_pvnmk")
theme_override_font_sizes/font_size = 48
text = "E "
horizontal_alignment = 2
vertical_alignment = 2

[connection signal="button_down" from="MarginContainer/CenterContainer/HBoxContainer/Rocket" to="." method="_on_rocket_button_down"]
[connection signal="button_up" from="MarginContainer/CenterContainer/HBoxContainer/Rocket" to="." method="_on_rocket_button_up"]
[connection signal="button_down" from="MarginContainer/CenterContainer/HBoxContainer/Spring" to="." method="_on_spring_button_down"]
[connection signal="button_up" from="MarginContainer/CenterContainer/HBoxContainer/Spring" to="." method="_on_spring_button_up"]
[connection signal="button_down" from="MarginContainer/CenterContainer/HBoxContainer/Minicar" to="." method="_on_minicar_button_down"]
[connection signal="button_up" from="MarginContainer/CenterContainer/HBoxContainer/Minicar" to="." method="_on_minicar_button_up"]
